[tool.poetry]
name = "reform"
version = "0.1.0"
description = "Simple API around 'unshare' and 'chroot' Linux feature"
authors = ["Zohar Malamant <ZOM@equinor.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = "^4.12.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
mypy = "^1.14.1"
ruff = "^0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
